--- a/static/phimSapChieu.css
+++ b/static/phimSapChieu.css
@@ -242,6 +242,15 @@ footer {
     
 }
 
+.seat:hover .seat3{
+    display:block;
+}
+
+.seat3{
+    display: none;
+    padding-left: 30px;
+}
+
 .seat2{
     display: none;
     margin-left: 30px
